--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="text-2">Teresia Zammy</div><br>
                 <div class="text-3">And I'm a <span class="typing"></span></div><br>
                 <a href="#" id="subscribeLink">Subscribe on Youtube</a> 
-                <br>  <a href="https://github.com/zammy254/zammy254.github.io/blob/main/mama%20-%20zammy.mp3" download> ⬇️ MAMA Song</a><br><br>
+                <br>
+                <a href="https://github.com/zammy254/zammy254.github.io/raw/main/mama%20-%20zammy.mp3" download> ⬇️ MAMA Song</a><br><br>
 
 
 <script>
