--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div><br>
                 <a href="#" id="subscribeLink">Subscribe on Youtube</a> 
                 <br>
-                <a href="https://github.com/zammy254/zammy254.github.io/raw/main/mama%20-%20zammy.mp3" download> ⬇️ MAMA</a><br><br>
+                <a href="https://github.com/zammy254/zammy254.github.io/raw/main/mama%20-%20zammy.mp3" download> ⬇️ MAMA SONG</a><br><br>
 
 
 <script>
